2015-05-25  Dan Bernstein  <mitz@apple.com>

        ASSERT_MAIN_THREAD and DOM_ASSERT_MAIN_THREAD are unnecessary no-ops
        https://bugs.webkit.org/show_bug.cgi?id=145372

        Reviewed by Sam Weinig.

        * Configurations/Base.xcconfig: Removed DISABLE_THREAD_CHECK from DEBUG_DEFINES.

2015-05-25  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Add construct property to WebKitWebContext to set the IndexedDB database directory
        https://bugs.webkit.org/show_bug.cgi?id=140882

        Reviewed by Gustavo Noronha Silva.

        Add WebKitWebContext:indexed-db-database-directory construct only property.

        * UIProcess/API/gtk/WebKitWebContext.cpp:
        (webkitWebContextGetProperty):
        (webkitWebContextSetProperty):
        (webkitWebContextConstructed):
        (webkit_web_context_class_init):

2015-05-24  Sam Weinig  <sam@webkit.org>

        Crash when using a removed ScriptMessageHandler
        <rdar://problem/20888499>
        https://bugs.webkit.org/show_bug.cgi?id=145359

        Reviewed by Dan Bernstein.

        * WebProcess/UserContent/WebUserContentController.cpp:
        (WebKit::WebUserMessageHandlerDescriptorProxy::~WebUserMessageHandlerDescriptorProxy):
        Invalidate the descriptor when the message handler client (as implemented by WebUserMessageHandlerDescriptorProxy)
        goes away. This will happen if a script message handler is removed at the API level or the WebUserContentController
        is destroyed (which will happen if all the pages get destroyed).

2015-05-23  Dan Bernstein  <mitz@apple.com>

        <rdar://problem/21090327> /S/L/PrivateFrameworks/WebKit.framework is missing Headers and PrivateHeaders symlinks
        https://bugs.webkit.org/show_bug.cgi?id=145354

        Reviewed by David Kilzer.

        * WebKit2.xcodeproj/project.pbxproj: Create Headers and PrivateHeaders symlinks alongside
        the dylib symlink.

2015-05-23  Sungmann Cho  <sungmann.cho@navercorp.com>
